# ChatBot2

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
app/api/: routes.py
app/core/: config.py  kv_store.py
app/services/: chat_service.py  rag_service.py
data/: site_content.txt
data/chroma_db/: chroma.sqlite3
ingestion/: ingest.py
